文件下载加速

--- a/oses/debian/Dockerfile
+++ b/oses/debian/Dockerfile
@@ -2,7 +2,7 @@ FROM         --platform=$TARGETOS/$TARGETARCH debian:bullseye-slim
 
 LABEL        author="Michael Parker" maintainer="parker@pterodactyl.io"
 
-LABEL        org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
+LABEL        org.opencontainers.image.source="https://git-yjs.jiongzu.cn/https://github.com/pterodactyl/yolks"
 LABEL        org.opencontainers.image.licenses=MIT
 
 ENV          DEBIAN_FRONTEND noninteractive
