--- a/steamcmd/proton/Dockerfile
+++ b/steamcmd/proton/Dockerfile
@@ -27,12 +27,12 @@ RUN         dbus-uuidgen --ensure
 RUN         python3 -m pip install protontricks
 
 # Set up Winetricks
-RUN	        wget -q -O /usr/sbin/winetricks https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
+RUN	        wget -q -O /usr/sbin/winetricks https://git-yjs.jiongzu.cn/https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
             && chmod +x /usr/sbin/winetricks
 
 ## install rcon
 RUN         cd /tmp/ \
-            && curl -sSL https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
+            && curl -sSL https://git-yjs.jiongzu.cn/https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
             && tar xvf rcon.tar.gz \
             && mv rcon-0.10.3-amd64_linux/rcon /usr/local/bin/
             
