--- a/voice/mumble/Dockerfile
+++ b/voice/mumble/Dockerfile
@@ -2,7 +2,7 @@ FROM      --platform=$TARGETOS/$TARGETARCH alpine:3.16
 
 LABEL       author="Michael Parker" maintainer="parker@pterodactyl.io"
 
-LABEL     org.opencontainers.image.source="https://github.com/pterodactyl/yolks"
+LABEL     org.opencontainers.image.source="https://git-yjs.jiongzu.cn/https://github.com/pterodactyl/yolks"
 LABEL     org.opencontainers.image.licenses=MIT
 
 ##    install dependencies
