--- a/wine/latest/Dockerfile
+++ b/wine/latest/Dockerfile
@@ -12,7 +12,7 @@ RUN             dpkg --add-architecture i386 \
                 && apt install -y --no-install-recommends gnupg2 numactl tzdata software-properties-common libntlm0 winbind xvfb xauth python3 libncurses5:i386 libncurses6:i386 libsdl2-2.0-0 libsdl2-2.0-0:i386
 
 RUN             cd /tmp/ \
-                && curl -sSL https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
+                && curl -sSL https://git-yjs.jiongzu.cn/https://github.com/gorcon/rcon-cli/releases/download/v0.10.3/rcon-0.10.3-amd64_linux.tar.gz > rcon.tar.gz \
                 && tar xvf rcon.tar.gz \
                 && mv rcon-0.10.3-amd64_linux/rcon /usr/local/bin/
 
@@ -24,7 +24,7 @@ RUN             apt update
 RUN             apt install --install-recommends winehq-stable cabextract wine-binfmt -y
 
 # Set up Winetricks
-RUN	            wget -q -O /usr/sbin/winetricks https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
+RUN	            wget -q -O /usr/sbin/winetricks https://git-yjs.jiongzu.cn/https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks \
                 && chmod +x /usr/sbin/winetricks
 
 ENV             HOME=/home/container
